concol/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
      annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.rule: Host(`controller.dcn.virtual33.myguest.virtualbox.org`)
        traefik.ingress.kubernetes.io/router.tls: "true"
    spec:
      containers:
        - name: controller
          image: nexus3.onap.org:10001/onap/sdnc-image:2.6.1
          ports:
            - containerPort: 8181
            - containerPort: 8182
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ready
              port: 8181
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8181
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: devicemanager-config
              mountPath: /opt/opendaylight/etc/devicemanager.properties
              subPath: devicemanager.properties
            - name: mountpoint-config
              mountPath: /opt/opendaylight/etc/mountpoint-registrar.properties
              subPath: mountpoint-registrar.properties
            - name: certs-properties-config
              mountPath: /opt/opendaylight/current/certs/certs.properties
              subPath: certs.properties
            - name: certs-secret
              mountPath: /opt/opendaylight/current/certs/keys0.zip
              subPath: keys0.zip
      volumes:
        - name: devicemanager-config
          configMap:
            name: devicemanager-properties
        - name: mountpoint-config
          configMap:
            name: mountpoint-registrar-config
        - name: certs-properties-config
          configMap:
            name: certs-properties-config
        - name: certs-secret
          secret:
            secretName: certs-secret
