concol/templates/odlux-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odlux
  labels:
    app: odlux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odlux
  template:
    metadata:
      labels:
        app: odlux
      annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.rule: Host(`odlux.oam.virtual33.myguest.virtualbox.org`)
        traefik.ingress.kubernetes.io/router.tls: "true"
    spec:
      containers:
        - name: odlux
          image: nexus3.onap.org:10001/onap/sdnc-web-image:2.6.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: logs
              mountPath: /var/log
      volumes:
        - name: logs
          emptyDir: {}
