concol/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
spec:
  selector:
    app: controller
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8181
    - name: websocket
      protocol: TCP
      port: 8182
      targetPort: 8182
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
