concol/templates/odlux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odlux
spec:
  selector:
    app: odlux
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
