concol/templates/ves-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ves-collector
spec:
  type: NodePort
  selector:
    app: ves-collector
  ports:
    - port: 8080
      targetPort: 8080
