concol/templates/ves-collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ves-collector
  namespace: onap
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: ves-collector.dcn.virtual33.myguest.virtualbox.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ves-collector
                port:
                  number: 8080
